--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="libr/unirest-java-1.4.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Derek/workspace/Nutrishot Food Scanner/libr/unirest-java-1.4.8-SNAPSHOT-jar-with-dependencies.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Derek/workspace/Nutrishot-Food-Scanner/libr/json-simple.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Derek/workspace/Nutrishot-Food-Scanner/libr/unirest-java-1.4.8-SNAPSHOT-jar-with-dependencies.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
