--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="libr/unirest-java-1.4.7.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Derek/workspace/Nutrishot-Food-Scanner/libr/json-simple.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Derek/workspace/Nutrishot-Food-Scanner/libr/unirest-java-1.4.8-SNAPSHOT-jar-with-dependencies.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Derek/workspace/Nutrishot-Food-Scanner/libr/mysql-connector-java-5.1.38-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
